--- a/web/resources/styles.css
+++ b/web/resources/styles.css
@@ -23,7 +23,7 @@ h3 {
 }
 
 header {
-  padding-top: 20px;
+  padding-top: 5px;
   display: block;
   border: 2px solid red;
   text-align: center;
@@ -46,7 +46,7 @@ img{
 
 .footer {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   display: block;
   border: 2px solid red;
   text-align: center;
@@ -57,7 +57,8 @@ img{
 }
 
 .form {
-
+     
+  padding-top: 5px;
   display: flex;
   justify-content: center;
   border: 2px solid red;
@@ -65,18 +66,59 @@ img{
   padding-bottom: 10px;
 }
 .cButton{
-  font-size: 18px;
+  display: block;
+  font-size: 14px;
   text-align: center;
-  display: flex;
-  justify-content: center;
     
 }
 
 .aform {
-  font-size: 24px;
-  display: flex;
   justify-content: center;
+  padding-top: 5px;  
+  text-align: center;
+  font-size: 16px;
+  display: flex;
   border: 2px solid red;
-  
   padding-bottom: 10px;
+}
+
+.card {
+  display: block;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  margin: auto;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  max-width: fit-content;
+  position: relative;
+}
+a:link {
+  text-decoration: none ;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+table{
+  table-layout: fixed; width: auto;
+  color: white;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+td {
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.btn {
+  color: grey;
+  font-weight: bolder;
+  text-align: center;
+  width: 150px;
+  height: 150px;
+  font-size: 14px;
+  border-style:  none;
+  display: inline-grid;
+  align-items: center;
+  justify-content: center;
 }
