--- a/web/resources/styles.css
+++ b/web/resources/styles.css
@@ -122,3 +122,15 @@ td {
   align-items: center;
   justify-content: center;
 }
+
+li{
+    margin: auto;
+    display: flex;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 18px;
+    list-style: none;
+}
