--- a/web/resources/styles.css
+++ b/web/resources/styles.css
@@ -155,3 +155,9 @@ textarea{
     justify-content: center;
     align-items: center;
 }
+.upTable{
+    
+    table-layout: auto;
+    font-size: 14px;
+    justify-content: center;
+}
