Massor med test och ändringar fram och tillbaka tills man fått det att fungera.

--- a/web/resources/styles.css
+++ b/web/resources/styles.css
@@ -161,3 +161,7 @@ textarea{
     font-size: 14px;
     justify-content: center;
 }
+
+.ui-field-contain .ui-controlgroup-controls{
+width: 100%;
+}
