--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -1,5 +1,5 @@
 html{
-  margin: 0 auto;  
+   
   height: 100%;
 }
 h1, h2, h3{
@@ -31,12 +31,12 @@ img{
   margin:auto;
   display: block;
 }
-.logo-img{
+#logo-img{
   height: 100px;
   width: 75px;
   margin: auto;
 }
-.footer{
+#footer{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   display: block;
@@ -181,11 +181,11 @@ textarea{
   header{
     width: auto;
   }
-  .logo-img{
+  #logo-img{
   max-width: fit-content;
   margin: auto 0;
 }
-.footer{
+#footer{
     width: fit-content;
     margin: auto 0;
 }
