--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -1,158 +1,100 @@
-html{
-   
-  height: 100%;
+html {
+    height: 100%;
+    font-family: sans-serif;
+}
+
+header {
+    text-align: center;
+    width: fit-content;
+    display: block;
+    margin: 0 auto;
+    margin-top: 75px;
+}
+
+a{
+    text-decoration: none;
 }
 h1, h2, h3{
-  margin: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  text-align: center;
+    font-family: sans-serif;
 }
-h1{
-  font-size: 32px;
+h1 {
+    font-size: 34px;
 }
 h2{
-  font-size: 30px;
-  color: grey;
+    font-size: 30px;
+    color: #999999;
 }
 h3{
-  font-size: 24px;
+    font-size: 28px;
 }
-header{
-  padding-top: 5px;
-  display: block;
-  border: 1px solid red;
-  text-align: center;
-  margin: auto;
-  position: relative;
-}
+
 img{
-  max-width: 100%;
-  margin:auto;
-  display: block;
+    display: block;
+    margin: 0 auto;
+    
 }
-#logo-img{
-  height: 100px;
-  width: 75px;
-  margin: auto;
+.nav{
+
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: fit-content;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
-#footer{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  display: block;
-  border: 2px solid red;
-  text-align: center;
-  margin: auto;
-  position: relative;
-  padding-top: 15px;
-  margin-bottom: 30px;
+
+.footer{
+    font-family: sans-serif;
+    font-size: 18px;
+    text-align: center;
+    width: fit-content;
+    display: block;
+    margin: 0 auto;
+    padding: 10px;
 }
-.form{   
-  padding-top: 5px;
-  display: flex;
-  justify-content: center;
-  border: 2px solid red;
-  text-align: center;
-  padding-bottom: 10px;
+
+li{
+   list-style: none;
 }
-.cButton{
-  display: block;
-  font-size: 14px;
-  text-align: center;    
+.menuTable{
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
+    margin: 0 auto;
 }
-.aform{
-  justify-content: center;
-  padding-top: 5px;  
-  text-align: center;
-  font-size: 16px;
-  display: flex;
-  border: 2px solid red;
-  padding-bottom: 10px;
-}
-.card{
-  display: block;
+.activeTable{
+  text-align: left;  
+  font-weight: bold;
   align-items: center;
-  text-align: center;
-  padding: 20px;
   margin: auto;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  max-width: fit-content;
-  position: relative;
+  font-family: sans-serif;
+  width: 300px;
+  padding: 10px;
+  font-size: 30px;
+
 }
-a:link{
-  text-decoration: none ;
+.searchHead{
+    font-size: 30px;
+   
 }
-.card:hover{
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-table{
-  table-layout: fixed; width: auto;
-  color: white;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
-}
-td{
-  
-  white-space: nowrap;  
-  padding: 5px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-.btn{
-  color: grey;
-  font-weight: bolder;
-  text-align: center;
-  width: 150px;
-  height: 150px;
-  font-size: 14px;
-  border-style:  none;
-  display: inline-grid;
-  align-items: center;
-  justify-content: center;
-}
-li{
-    margin: auto;
-    display: flex;
-    padding: 2px;
-    justify-content: center;
-    text-align: center;
-    font-weight: bolder;
-    font-size: 16px;
-    list-style: none;
-}
-ul{
-    align-items: center;
-    position: relative;
-    justify-content: center;
-    display: block;
-    list-style-type: disc;
-    padding-left: 0px;
-}
-textarea{
-    font-size: 14px;
-}
-#returndate{
-    font-size: 16px;
-}
-.dataTable{
-    text-align: center;
-    font-size: 14px;
-    justify-content: center;
-    align-items: center;
-}
-.upTable{
-    margin: 0 auto;
-    table-layout: auto;
-    font-size: 14px;
-    justify-content: center;
+
+.search {
+      padding-top: 18px;
+      font-size: 30px;
+      padding: 7px;
+      margin-bottom: 20px;
+      border: none; /* <-- This thing here */
+      border:solid 1px #ccc;
+      border-radius: 10px;
 }
 .card2{
   text-align: left;  
-  font-weight: bold;
   display: block;
   align-items: center;
-  font-size: 14px;
   padding: 20px;
   margin: auto;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -160,34 +102,25 @@ textarea{
   max-width: 300px;
   position: relative;
 }
-.searchHead{
-    color: grey;
-    padding-bottom: 5px;
-}
-.search {
-      padding: 7px;
-      margin-bottom: 10px;
-      border: none; /* <-- This thing here */
-      border:solid 1px #ccc;
-      border-radius: 10px;
+
+.btn{
+  color: grey;
+  font-weight: bolder;
+  text-align: center;
+  width: 170px;
+  height: 170px;
+  font-size: 15px;
+  border-style:  none;
+  display: inline-grid;
+  align-items: center;
+  justify-content: center;
 }
 
-@media screen and(max-width:640px){
-  main{
-    margin: auto 0;
+.ui-datatable.webTable th,td,tr{
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    white-space: nowrap;
     width: auto;
-    overflow-x: hidden;
-  }
-  header{
-    width: auto;
-  }
-  #logo-img{
-  max-width: fit-content;
-  margin: auto 0;
-}
-#footer{
-    width: fit-content;
-    margin: auto 0;
-}
-
+    height: auto;
 }
