--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -8,7 +8,7 @@ header {
     width: fit-content;
     display: block;
     margin: 0 auto;
-    margin-top: 75px;
+    margin-top: 30px;
 }
 
 a{
@@ -91,6 +91,18 @@ li{
       border:solid 1px #ccc;
       border-radius: 10px;
 }
+
+.card{
+  display: block;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  margin: auto;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  max-width: fit-content;
+  position: relative;
+}
 .card2{
   text-align: left;  
   display: block;
@@ -109,18 +121,10 @@ li{
   text-align: center;
   width: 170px;
   height: 170px;
-  font-size: 15px;
+  font-size: 14px;
   border-style:  none;
   display: inline-grid;
   align-items: center;
   justify-content: center;
 }
 
-.ui-datatable.webTable th,td,tr{
-    font-family: sans-serif;
-    font-size: 12px;
-    font-weight: bold;
-    white-space: nowrap;
-    width: auto;
-    height: auto;
-}
