--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -45,17 +45,19 @@ img{
     
 }
 .nav{
-    align-items: center;
+    align-content: center;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
-    width: fit-content;
-    display: block;
+    display:block;
     margin: 0 auto;
     margin-bottom: 30px;
     margin-top: 30px;
 }
-
+.Ppanel{
+    width: 100%;
+    margin: 0 auto;
+}
 .footer{
     font-family: sans-serif;
     font-size: 18px;
@@ -138,6 +140,10 @@ li{
   align-items: center;
   justify-content: center;
 }
+table{
+    width: auto;
+    margin: 0 auto;
+}
 
 .ui-panelgrid{
     margin: 0 auto;
@@ -150,7 +156,11 @@ and (orientation : portrait) {
     
     
     .nav{
-        width: auto;
+        margin: 0 auto;
+    }
+    .ui-fluid{
+        margin: 0 auto;
+        width: 100%;
     }
 
 
