--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -51,27 +51,29 @@ hr{
 .nav{
     text-align: center;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
     margin: 0 auto;
-    margin-bottom: 20px;
     margin-top: 20px;
 }
 .Ppanel{
-    width: 100%;
+    width: 200%;
     margin: 0 auto;
+    font-size: 30px;
 }
 .footer{
     font-family: sans-serif;
     font-size: 18px;
     text-align: center;
     width: fit-content;
-    display: block;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    align-content: center;
     margin: 0 auto;
-    padding: 10px;
 }
 
 li{
@@ -152,6 +154,7 @@ table{
 }
 
 .ui-panelgrid{
+    width:100%;
     margin: 0 auto;
 }
 
@@ -160,15 +163,36 @@ and (min-device-width : 375px)
 and (max-device-width : 667px) 
 and (orientation : portrait) {
     
-    
+    html {
+        font-family: sans-serif;
+    }
+    header {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 25%;
+}
     .nav{
-        background: yellow;
-        margin: 0 auto;
-    }
-    .ui-fluid{
-        margin: 0 auto;
+        position: relative;
         width: 100%;
+        
     }
+    
+    .footer{
+    align-items: center;
+    font-family: sans-serif;
+    font-size: 35px;
+    text-align: center;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
 
 
 }
