--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -20,7 +20,8 @@ header {
     align-items: center;
     margin: 0 auto;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 10px;
+    position: relative;
 }
 
 a{
@@ -31,6 +32,7 @@ h1, h2, h3{
 }
 h1 {
     font-size: 34px;
+    color: #009999;
 }
 h2{
     font-size: 30px;
@@ -50,14 +52,13 @@ hr{
 }
 .nav{
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
     margin: 0 auto;
-    margin-top: 20px;
 }
 .Ppanel{
     width: 200%;
@@ -154,7 +155,6 @@ table{
 }
 
 .ui-panelgrid{
-    width:100%;
     margin: 0 auto;
 }
 
