--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -61,7 +61,7 @@ hr{
     margin: 0 auto;
 }
 .Ppanel{
-    width: 200%;
+    width: 100%;
     margin: 0 auto;
     font-size: 30px;
 }
@@ -76,9 +76,19 @@ hr{
     align-content: center;
     margin: 0 auto;
 }
-
+.results{
+    font-size: 25px;
+    font-weight: bold;
+    color: #009999;
+}
 li{
    list-style: none;
+}
+
+ul {
+    display:inline-block;
+    list-style-type: disc;
+    padding: 0;
 }
 .menuTable{
     font-family: sans-serif;
@@ -94,9 +104,8 @@ li{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   font-family: sans-serif;
-  width: 300px;
   padding: 10px;
-  font-size: 30px;
+  font-size: 25px;
 
 }
 .ui-row-editor .ui-row-editor-pencil {
@@ -135,6 +144,14 @@ li{
   max-width: 300px;
   position: relative;
 }
+#basic{
+    margin: auto;
+    width: 360px;
+    font-size:25px;
+    padding-bottom: 15px;
+    margin-bottom:20px; 
+}
+
 
 .btn{
   color: grey;
@@ -148,23 +165,41 @@ li{
   align-items: center;
   justify-content: center;
 }
-table{
-    width: auto;
-    margin: 0 auto;
-}
-
-.ui-panelgrid{
-    margin: 0 auto;
-}
 
 @media only screen 
-and (min-device-width : 375px) 
+and (min-device-width : 360px) 
 and (max-device-width : 667px) 
 and (orientation : portrait) {
     
     html {
         font-family: sans-serif;
     }
+    h1, h2, h3{
+    font-family: sans-serif;
+}
+h1 {
+    font-size: 24px;
+    color: #009999;
+}
+h2{
+    font-size: 20px;
+    color: #999999;
+}
+h3{
+    font-size: 18px;
+}
+.logo{
+    width: 30%;
+}
+.centerlogo{
+    width:50%;
+}
+
+ul {
+    display:inline-block;
+    list-style-type: disc;
+    padding: 0;
+}
     header {
     position: relative;
     width: 100%;
@@ -172,18 +207,68 @@ and (orientation : portrait) {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 25%;
 }
     .nav{
         position: relative;
         width: 100%;
         
     }
+    .results{
+    font-size: 15px;
+    font-weight: bold;
+    color: #009999;
+}
+#search{
+    width: 75%;
+}
+    .search {
+      padding-top: 15px;
+      font-size: 15px;
+      padding: 7px;
+      margin-bottom: 15px;
+      border: none; /* <-- This thing here */
+      border:solid 1px #ccc;
+      border-radius: 10px;
+}
+
+
+#basic{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size:15px;
+    padding-bottom: 15px;
+    margin-bottom:20px; 
+}
+
+.activeTable{
+  text-align: left;  
+  font-weight: bold;
+  align-items: center;
+  margin: auto;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  font-family: sans-serif;
+  padding: 10px;
+  font-size: 15px;
+
+}
+table.bodywrapcenter>tr>td {
+    width: 100%;
+    float: left;
+}
+
+.menuTable{
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
+    margin: 0 auto;
+}
     
     .footer{
     align-items: center;
     font-family: sans-serif;
-    font-size: 35px;
+    font-size: 15px;
     text-align: center;
     display: flex;
     flex-grow: 1;
@@ -191,7 +276,17 @@ and (orientation : portrait) {
     justify-content: center;
     width: 100%;
 }
-
+.btn{
+  color: grey;
+  font-weight: bolder;
+  text-align: center;
+  width: 100px;
+  font-size: 12px;
+  border-style:  none;
+  display: inline-grid;
+  align-items: center;
+  justify-content: center;
+}
 
 
 }
